# cpp2rust

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml  format-apply.yml  format.yml  run-tests.yml
cmake/: generate-buildconfig-py.cmake  rust-toolchain.cmake
cpp2rust/: CMakeLists.txt  cpp2rust.cpp  cpp2rust_lib.cpp  cpp_rule_preprocessor.cpp  logging.cpp  logging.h  rules_dir.cpp  rules_dir.h
cpp2rust/compat/: assert.h  errno.h  platform_flags.h
cpp2rust/compat/arpa/: inet.h
cpp2rust/converter/: converter.cpp  converter.h  converter_lib.cpp  converter_lib.h  lex.h  mapper.cpp  mapper.h  rule_src_parser.cpp  rule_src_parser.h  translation_rule.cpp  translation_rule.h
cpp2rust/converter/models/: converter_refcount.cpp  converter_refcount.h
cpp2rust/converter/plugins/: emplace_back.cpp
libc-dep/: CMakeLists.txt  Cargo.toml
libcc2rs/: CMakeLists.txt  Cargo.toml
libcc2rs-macros/: Cargo.toml
libcc2rs-macros/src/: goto.rs  lib.rs  state_machine.rs  switch.rs
libcc2rs-macros/tests/: compile_fail.rs  control_flow.rs
libcc2rs-macros/tests/ui/: forbidden.rs  forbidden.stderr
libcc2rs/src/: alloc.rs  compat.rs  dec.rs  fd.rs  fn_ptr.rs  inc.rs  io.rs  lib.rs  rc.rs  reinterpret.rs  union.rs  va_args.rs
libcc2rs/src/libc_shims/: cfile.rs  dirent.rs  fdset.rs  ifaddrs.rs  ip.rs  mod.rs  netdb.rs  poll.rs  pwd.rs  socket.rs  stat.rs  termios.rs  time.rs
rule-preprocessor/: Cargo.toml  rust-toolchain.toml
rule-preprocessor/src/: ir.rs  main.rs  semantic.rs  syntactic.rs
rules/: Cargo.toml  build.rs
rules/algorithm/: ir_refcount.json  ir_unsafe.json  tgt_refcount.rs  tgt_unsafe.rs
rules/arpa_inet/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/array/: tgt_unsafe.rs
rules/assert/: src.cpp
rules/brotli/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/builtin/: ir_refcount.json  ir_unsafe.json  src.c  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/carray/: tgt_refcount.rs  tgt_unsafe.rs
rules/cstdlib/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/cstring/: ir_unsafe.json  src.c  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/deque/: tgt_unsafe.rs
rules/dirent/: src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/errno/: ir_unsafe.json  src.c  tgt_refcount.rs  tgt_unsafe.rs
rules/eventfd/: src.c  tgt_refcount.rs  tgt_unsafe.rs
rules/fcntl/: src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/fnmatch/: src.cpp  tgt_unsafe.rs
rules/fstream/: tgt_unsafe.rs
rules/ifaddrs/: src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/initializer_list/: tgt_unsafe.rs
rules/ioctl/: src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/iostream/: tgt_refcount.rs  tgt_unsafe.rs
rules/ip/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/locale/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/map/: ir_refcount.json  ir_unsafe.json  tgt_refcount.rs  tgt_unsafe.rs
rules/net_if/: src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/netdb/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/pair/: ir_unsafe.json  tgt_refcount.rs  tgt_unsafe.rs
rules/poll/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/pwd/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/rustls/: rustls.h  src.c  src.cpp  tgt_unsafe.rs
rules/select/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/signal/: ir_unsafe.json  src.cpp  tgt_unsafe.rs
rules/socket/: ir_unsafe.json  src.c  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/src/: modules.rs
rules/stat/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/stdio/: ir_refcount.json  ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/string/: ir_refcount.json  ir_unsafe.json  tgt_refcount.rs  tgt_unsafe.rs
rules/termios/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/time/: ir_unsafe.json  src.c  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/unique_ptr/: tgt_refcount.rs  tgt_unsafe.rs
rules/unistd/: ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/vector/: ir_refcount.json  ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/xattr/: ir_unsafe.json  src.c  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
tests/lit/lit/formats/: Cpp2RustTest.py
tests/multi-file/cross_tu_anon_enum_collision/: CMakeLists.txt  a.c  b.c
tests/multi-file/cross_tu_tag_collision/: CMakeLists.txt  a.c  b.c
tests/multi-file/extern_functions/: a.c  b.c  test.expectations
tests/multi-file/header_function/: CMakeLists.txt  a.c  b.c  header.h
tests/multi-file/opaque_forward_decl/: CMakeLists.txt  a.c  b.c  header.h
tests/multi-file/static_name_collision/: CMakeLists.txt  a.c  b.c
tests/ub/: dangling-prvalue-as-lvalue.cpp  enum_out_of_range_cast.cpp  enum_out_of_range_increment.c  file_use_after_fclose.c  int_to_pointer_out_of_range.c  int_to_pointer_random.c  max.cpp  ub1.cpp  ub10.cpp  ub11.cpp  ub12.cpp  ub13.cpp  ub14.cpp  ub15.cpp  ub16.cpp  ub17.cpp  ub18.cpp  ub19.cpp  ub2.cpp  ub20.cpp  ub21.cpp  ub3.cpp  ub4.cpp  ub5.cpp  ub6.cpp  ub7.cpp  ub8.cpp  ub9.cpp
tests/unit/: addr_of_global.cpp  anonymous_enum.cpp  anonymous_enum_c.c  array_2d_default.c  array_const_init.c  array_of_noncopy_struct.cpp  assign_as_value.c  bool_condition_enum.cpp  bool_condition_enum_c.c  bool_condition_int.cpp  bool_condition_int_c.c  bool_condition_logical.cpp  bool_condition_logical_c.c  bool_condition_ptr.cpp  bool_condition_ptr_c.c  builtin.c  builtin_types_compatible.c  c_struct.c  class_templates.cpp  comma_operator.cpp  compound_assign_paren.cpp  compound_assign_ref.cpp  cstring.cpp  default_in_statics.cpp  do_while_continue.c  doubly_linked_list.cpp  enum_default_in_static.c  enum_int_interop.cpp  enum_int_interop_c.c  errno.c  expr_as_bool_c.c  expr_as_bool_cpp.cpp  fcntl.c  fd_io.c  fd_set_macros.c  fn_ptr_arity.cpp  fn_ptr_stdlib_compare.cpp  fstat.c  global-initialization-using-global.cpp  global_pointers.cpp  (+142 more)
